fix button spacing

--- a/client/css/signup-login.css
+++ b/client/css/signup-login.css
@@ -59,7 +59,7 @@
 }
 
 .button-login {
-  margin: 1em .2em;
+  margin: 0 auto 1em;
   background-color: black;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .button-signup {
-  margin: 1em .2em;
+  margin: 0 auto 1em;
   background-color: black;
 }
 
